# google-docs-mcp

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_VIDEO_RERECORD_SCRIPT.md  Dockerfile  GO_LIVE_RUNBOOK.md  LICENSE  MIGRATION_READINESS.md  PHASE1_VERIFICATION_KIT.md  README.md  ROADMAP.md  ROADMAP_SPECS.md  SCOPE_EXPANSION_PLAN.md  SECURITY.md  START_HERE.md  VERIFICATION_SUBMISSION.md  auth.py  deploy.sh  docs_api.py  fly.toml  litestream.yml  pyproject.toml  pytest.ini  requirements.txt  server.py  test-results.json  vercel.json
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: breaking-change-check.yml  codeql.yml  deploy-vercel.yml  deploy.yml  e2e.yml  prod-drift.yml  release-drafter.yml  release.yml  scorecard.yml  test.yml
api/: index.py
docs/: ARCHITECTURE.md  COMPATIBILITY_POLICY.md  COVERAGE.md  LLM_RECOVERY.md  MIGRATION_v1_to_v2.md  PRIVACY.md  RUNBOOK.md  THREAT_MODEL.md  TOOL_CONTRACT.md  USER_GUIDE.md  asvs-level-1-checklist.md  security-posture.md
docs/adr/: 2026-05-27-commercial-ready-engineering.md  2026-05-27-dr-and-observability.md  2026-05-27-rename-to-appscriptly.md  2026-05-27-retry-backoff-and-hardening.md  2026-05-27-spec-compliance-and-scope-union.md  2026-05-27-vercel-pilot.md  2026-05-28-bound-script-generator.md
docs/runbooks/: backup-restore.md  deploy-rollback.md  gcp-project-linking.md  key-rotation.md  pypi-publish-stub.md  sentry-setup.md  vercel-activation.md
scripts/: check_live_drift.py  entrypoint.sh  freeze_tool_surface.py  migrate_existing_users.py  mutation_check.py  preflight_strict_flip.sh  refreeze_onto_main.py
src/appscriptly/: __init__.py  __main__.py  _deprecation.py  _tool_helpers.py  activation.py  apps_script_hmac.py  auth.py  automation_ledger.py  config.py  credentials.py  crypto.py  decorators.py  docx_import.py  durable_nonce.py  errors.py  google_api_client.py  google_clients.py  job_store.py  key_provider.py  keys.py  license.py  oauth_google.py  oauth_state.py  observability.py  preview.py  restructure.gs  retrofit.py  server.py  setup_apps_script.py  tool_schemas.py  user_store.py
src/appscriptly/http_server/: __init__.py  _helpers.py  _state.py  app.py  jobs.py  middleware.py
src/appscriptly/http_server/routes/: __init__.py  convert.py  convert_status.py  oauth.py  observability.py
src/appscriptly/services/: __init__.py
src/appscriptly/services/admin/: _expected_tools.py  tools.py
src/appscriptly/services/apps_script/: __init__.py  _expected_tools.py  _frames_staging.py  _lifecycle.py  _observability.py  _recipes.py  api.py  calendar_sync.py  check_activation.py  contact_sync.py  custom_function.py  doc_menu.py  edit_trigger.py  encode_video.py  form_handler.py  grade_form_responses.py  install_recipe.py  lifecycle_tools.py  processes.py  recipes_catalog.py  refresh_linked_slides.py  scopes.py  sheet_dashboard.py  sheet_menu.py  slides_menu.py  task_rollover.py  tools.py  video_deck.py
src/appscriptly/services/calendar/: __init__.py  _expected_tools.py  api.py  tools.py
src/appscriptly/services/contacts/: __init__.py  _expected_tools.py  api.py  tools.py
src/appscriptly/services/docs/: __init__.py  _expected_tools.py  api.py  content_transplant.py  markdown_render.py  tab_tree.py  tools.py
src/appscriptly/services/drive/: _expected_tools.py  api.py  sharing.py  tools.py
src/appscriptly/services/forms/: __init__.py  _expected_tools.py  api.py  tools.py
src/appscriptly/services/gas_deploy/: __init__.py  _expected_tools.py  api.py  tools.py
src/appscriptly/services/gmail/: __init__.py  _expected_tools.py  api.py  (+2 more)
src/appscriptly/storage/: __init__.py  backend_selector.py  vercel_kv_backend.py
src/google_docs_mcp/: __init__.py  __main__.py  _tool_helpers.py  auth.py  cli.py  config.py  credentials.py  crypto.py  decorators.py  docs_api.py  docx_import.py  drive_api.py  errors.py  google_api_client.py  google_clients.py  http_server.py  key_provider.py  keys.py  license.py  oauth_google.py  oauth_state.py  observability.py  preview.py  resources.py  restructure.gs  retrofit.py  server.py  setup_apps_script.py  setup_state.py  tool_schemas.py  user_store.py
src/google_docs_mcp/gas_deploy/: __init__.py  client.py  scopes.py
src/google_docs_mcp/http_server/: __init__.py  _helpers.py  _pages.py  _state.py  app.py  middleware.py
src/google_docs_mcp/storage/: backend_selector.py  vercel_kv_backend.py
tests/: conftest.py  test_doc_tool_count.py
tests/chaos/: chaos_plan.md  run_chaos.py
tests/golden/: tool_surface.json
tests/integration/: test_consistency_owned_by_app.py  test_frame_upload_route.py  test_fresh_user_flow.py  test_migration_upgrade_path.py  test_multi_tenant_ownership.py  test_oauth_signed_url_roundtrip.py  test_retrofit.py  test_roundtrip.py  test_tab_existing_doc_e2e.py  test_title_threshold.py
tests/js/: verify_hmac_behavior.test.mjs
tests/unit/: test_activation.py  test_admin_audit.py  test_api_convert_contract.py  test_api_convert_multitenancy.py  test_apps_script_hmac.py  test_async_error_handling.py  test_automation_ledger.py  test_backend_selector.py  test_base_tier_scopes.py  test_batch_dispatch.py  test_check_live_drift.py  test_cli_dispatch.py  test_config.py  test_configure_auth_for_http.py  test_convert_dry_run.py  test_convert_endpoint_title.py  test_convert_job_model.py  test_convert_job_runner.py  test_credentials.py  test_crypto_signed_urls.py  test_doc_cohesion.py  test_docx_import.py  test_docx_import_pipeline.py  test_dry_run_plan_equivalence.py  test_durable_nonce.py  test_errors_retryable.py  test_gas_deploy.py  test_gcp_project_linking.py  test_gdocs_tool_decorator.py  test_get_retry_http.py  test_google_api_client.py  test_google_api_service_cache.py  test_google_api_timeout.py  test_google_clients.py  test_health_endpoint.py  test_http_logging_request_id.py  test_http_server_middleware.py  test_info_endpoint.py  test_isolated_db_fixture.py  test_job_store.py  (+43 more)
tests/unit/services/: test_discovery_safety.py  test_generated_gs_syntax.py  test_tool_registration.py
(+101 files in other folders)
