[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-docs-mcp"
version = "1.5.1"
description = "MCP server that creates Google Docs with native Tabs (Oct 2024 sidebar feature) — for Claude Desktop and Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sundeep Gunda" }]
requires-python = ">=3.10"
keywords = ["mcp", "google-docs", "claude", "anthropic", "tabs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=3.3.1",  # v1.1: GoogleProvider + OAuthProxy + get_access_token deps
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "markdown-it-py>=4.2.0",
    "python-docx>=1.0",  # used by preview_tab_split + retrofit_existing_docx
    "typing-extensions>=4.15.0",  # NotRequired + TypedDict for Python 3.10/3.11
    "starlette>=1.0.0,<1.1",  # v1.3.1: pin upper bound — FastMCP transitive can drift
    # === v1.3.1 security floor — pinned to CVE-fixed minimums ===
    # Re-audit these on every minor release. Bump floors when new CVEs land.
    # After modifying any line below, regenerate uv.lock via `uv sync`
    # and commit the lockfile. The Dockerfile uses `uv sync --frozen`
    # so any drift fails CI before deploy.
    "cryptography>=48.0.0,<49",  # CVE-2026-26007, -34073, -39892
    # pyjwt: transitive via mcp[crypto] only — we don't import jwt directly
    # anywhere in src/. Pin kept because CVE-2026-32597 (RFC 7515 §4.1.11
    # `crit` header validation, fixed in 2.12.0) is real + active; without
    # the floor, a future solver could resolve down to a vulnerable
    # version. Independent of PYSEC-2025-183 — that's a disputed key-length
    # CVE we ignore in CI; see .github/workflows/e2e.yml pip-audit step
    # for the non-applicability rationale.
    "pyjwt>=2.12.1,<3",          # CVE-2026-32597 (transitive via mcp[crypto])
    "urllib3>=2.7.0,<3",         # CVE-2026-44431, -44432
    "requests>=2.34.2,<3",       # CVE-2026-25645
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-json-report>=1.5",  # emits test-results.json baked into Docker image
    # === v1.4.0b: integration test extras ===
    # Kept lean — chaos harness + integration tests use stdlib threading
    # and unittest.mock.patch on Flow.from_client_config (matches the
    # existing test_oauth_google.py pattern). pytest-asyncio is here
    # for forthcoming async paths but unused today.
    "pytest-asyncio>=0.23",
    # === v2.0.6: coverage gate (R33) ===
    # pytest-cov drives the --cov-fail-under floor configured in
    # pytest.ini (currently 55%, set by the Py 3.11 outlier on Linux
    # which measures 55.21% vs 56.5%+ on every other version).
    # Ratchet policy in docs/COVERAGE.md (+1pp/release toward 80%).
    "pytest-cov>=4.1",
]
# === v2.0.6: lint extras (closes pyright/ruff CI gap) ===
# e2e.yml's `lint` job invokes `uv run pyright src/` and
# `uv run ruff check src/ tests/`. Before this extra, neither tool was
# declared anywhere — `uv run` couldn't find them and the job died with
# `Failed to spawn: pyright / No such file or directory`. Pinned floors
# avoid surprise lint-rule churn between local + CI; bump on a separate
# PR when ready to absorb new findings.
lint = [
    "pyright>=1.1.400",
    "ruff>=0.7",
]

[project.urls]
Homepage = "https://github.com/Sundeepg98/google-docs-mcp"
Issues = "https://github.com/Sundeepg98/google-docs-mcp/issues"

[project.scripts]
google-docs-mcp = "google_docs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_docs_mcp"]

# ---------------------------------------------------------------------
# Ruff lint config (v2.6a)
#
# Today's job: enforce the google_clients.get_service chokepoint.
# The TID251 rule bans the bare `from googleapiclient.discovery import
# build` import outside the wrapper file itself. Existing call sites
# are exempted via per-file-ignores below; PR2 migrates them and
# removes those ignores one file at a time.
#
# This config intentionally enables ONLY the TID rule family — broader
# linting is left to a separate PR so this change is reviewable in
# isolation and the e2e workflow's `ruff check src/ tests/` doesn't
# suddenly turn red on unrelated style issues.
# ---------------------------------------------------------------------

[tool.ruff.lint]
select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"googleapiclient.discovery.build" = { msg = "Use google_docs_mcp.google_clients.get_service instead — single chokepoint for retry, logging, cache, etc. See PR #47 (v2.0.3 operator-secret leak) for the anti-pattern this lint prevents: a wrapper that's bypassed by direct imports." }

[tool.ruff.lint.per-file-ignores]
# These two files own the legitimate use of googleapiclient.discovery.build.
# PR2-A (v2.6b) removed docs_api.py from this list.
# PR2-B (v2.6b) removed drive_api.py from this list.
# PR2-C (v2.6b) removed the final 4 — docx_import.py, preview.py,
# retrofit.py, and gas_deploy/client.py — closing the bypass class.
# M2 (v2.1.2) promoted the actual ``build()`` call from google_clients.py
# into the new google_api_client.GoogleApiClientAdapter — google_clients.py
# is now a thin delegating facade that only re-exports the Resource type.
# Any direct `from googleapiclient.discovery import build` outside these
# two files is a lint failure (= a reintroduced bypass that defeats the
# retry / logging / cache chokepoint).
"src/google_docs_mcp/google_clients.py" = ["TID251"]
"src/google_docs_mcp/google_api_client.py" = ["TID251"]

# ---------------------------------------------------------------------
# Pyright config (v2.0.6)
#
# `googleapiclient.discovery.Resource` is built dynamically from the
# Google API discovery document at runtime — its `.files()`,
# `.documents()`, `.scripts()`, etc. methods don't exist as static
# attributes that pyright can introspect. Every project that uses
# googleapiclient hits the same `reportAttributeAccessIssue` noise
# (46 instances across our 11 files). Silencing the rule globally
# is the idiomatic fix; the alternative is per-line `# type: ignore`
# at every Drive / Docs API call site, which pollutes diffs and
# offers zero real protection (it's not a bug class pyright catches
# anyway, since Resource attributes are intentionally unknowable
# statically).
#
# Everything else stays at default. The 7 genuine type issues
# pyright still flags on this codebase get proper fixes, not ignores.
# ---------------------------------------------------------------------

[tool.pyright]
include = ["src"]
# googleapiclient.discovery.Resource is dynamic; see rationale above.
reportAttributeAccessIssue = false
