[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PR-Δ5.5 (2026-05-27): renamed from ``google-docs-mcp`` to ``appscriptly``.
# The Python module path ``src/appscriptly/`` is INTENTIONALLY kept
# at its original location — a full module rename would touch ~hundreds
# of imports across src/, tests/, and every consumer's pinned imports.
# The user-facing product name is ``appscriptly``; the implementation
# package stays at ``appscriptly`` until a separate planned ops
# move addresses the module-path rename. See
# ``docs/adr/2026-05-27-rename-to-appscriptly.md`` for the staged plan.
#
# The CLI binary ``google-docs-mcp`` is preserved as a backward-compat
# alias alongside the new ``appscriptly`` entry-point (see
# ``[project.scripts]`` below) so existing users' shell scripts /
# install instructions / muscle memory don't break on the rename.
name = "appscriptly"
version = "1.5.1"
description = "MCP server for Apps Script automation across Google Workspace — generates persistent workflows (time-driven jobs, custom menus, reactive automations) that live in your Workspace and run on Google's infrastructure"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sundeep Gunda" }]
requires-python = ">=3.10"
keywords = [
    "mcp", "claude", "anthropic",
    "appscript", "apps-script-generator",
    "workspace-automation", "google-workspace",
    "google-docs", "tabs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    # N4 CANARY (2026-07-10, SECURITY - re-check on EVERY fastmcp bump):
    # oauth_google._TokenInfoBodyClient stops bearer tokens leaking into
    # logs by intercepting GoogleTokenVerifier's exact call shape -
    # client.get("https://oauth2.googleapis.com/tokeninfo",
    # params={"access_token": ...}). A fastmcp release that switches to
    # client.request()/build_request(), changes the URL, or moves the
    # token would SILENTLY bypass the rewrite and revert to leaking.
    # Tripwire: tests/unit/test_token_log_hygiene.py::
    # test_fastmcp_verifier_path_logs_no_token runs fastmcp's REAL
    # verifier through our client and fails loudly on a shape change -
    # run it (or the unit suite) against the new version before merging
    # any fastmcp bump. Defense in depth (SensitiveQueryScrubFilter on
    # the log handlers) keeps tokens out of OUR logs regardless. No
    # upper bound on purpose: this file pins CVE FLOORS, and a ceiling
    # would block security fixes; the tripwire test is the guard.
    "fastmcp>=3.4.2",  # v1.1: GoogleProvider + OAuthProxy + get_access_token deps; v1.5.2: minor bump 3.3.1->3.4.2 (same major, dependabot.yml ignores only major fastmcp bumps)
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "markdown-it-py>=4.2.0",
    "python-docx>=1.2.0",  # used by preview_tab_split + retrofit_existing_docx
    "typing-extensions>=4.15.0",  # NotRequired + TypedDict for Python 3.10/3.11
    "starlette>=1.3.1,<1.4",  # v1.3.1: pin upper bound — FastMCP transitive can drift; v2.1.6: floor 1.0.1 (PYSEC-2026-161); 2026-07-08: floor 1.3.1 (CVE-2026-48817/-48818 fixed 1.1.0, PYSEC-2026-248 fixed 1.3.0, PYSEC-2026-249 fixed 1.3.1)
    # === v1.3.1 security floor — pinned to CVE-fixed minimums ===
    # Re-audit these on every minor release. Bump floors when new CVEs land.
    # After modifying any line below, regenerate uv.lock via `uv sync`
    # and commit the lockfile. The Dockerfile uses `uv sync --frozen`
    # so any drift fails CI before deploy.
    "cryptography>=48.0.0,<49",  # CVE-2026-26007, -34073, -39892
    # pyjwt: transitive via mcp[crypto] only — we don't import jwt directly
    # anywhere in src/. Pin kept because CVE-2026-32597 (RFC 7515 §4.1.11
    # `crit` header validation, fixed in 2.12.0) is real + active; without
    # the floor, a future solver could resolve down to a vulnerable
    # version. Floor raised to 2.13.0 to close PYSEC-2026-175/-177/-178/
    # -179 (HIGH/CRITICAL, all fixed in 2.13.0) flagged by the pip-audit
    # gate. Independent of PYSEC-2025-183 — that's a disputed key-length
    # CVE we ignore in CI; see .github/workflows/e2e.yml pip-audit step
    # for the non-applicability rationale.
    "pyjwt>=2.13.0,<3",          # CVE-2026-32597 + PYSEC-2026-175/177/178/179 (transitive via mcp[crypto])
    "urllib3>=2.7.0,<3",         # CVE-2026-44431, -44432
    "requests>=2.34.2,<3",       # CVE-2026-25645
    # 2026-07-08 pip-audit sweep (e2e security-audit job red since 2026-06-22):
    # three transitive deps of fastmcp/mcp had no floor here, so the locked
    # resolution sat on CVE-affected versions. Floors below = the fixed
    # minimums pip-audit reports.
    "joserfc>=1.6.8,<2",             # CVE-2026-48990 (fixed 1.6.7), CVE-2026-49852 (fixed 1.6.8); transitive via fastmcp server auth
    "pydantic-settings>=2.14.2,<3",  # GHSA-4xgf-cpjx-pc3j; transitive via mcp + fastmcp
    "python-multipart>=0.0.31,<1",   # CVE-2026-53538/-53539 (fixed 0.0.30), CVE-2026-53540 (fixed 0.0.31); transitive via mcp form parsing
    # 2026-07-18 pip-audit sweep (4 time-based CVEs surfaced since the
    # 2026-07-08 sweep). Both are imported directly in src AND also arrive
    # transitively, but had no floor here — so the locked resolution sat
    # on CVE-affected versions. Floors = the fixed minimums pip-audit reports.
    "httplib2>=0.32.0,<1",   # PYSEC-2026-3444 (unbounded gzip/deflate decompression DoS, fixed 0.32.0); imported in google_api_client.py + transitive via google-api-python-client/google-auth-httplib2 (their bound: >=0.19.0,<1.0.0)
    "mcp>=1.28.1,<2",        # CVE-2026-52870/-52869 (task-handler access + HTTP auth-principal, fixed 1.27.2), CVE-2026-59950 (WebSocket Host/Origin validation, fixed 1.28.1); imported in decorators.py + transitive via fastmcp-slim[client,server] (its bound: >=1.24.0,<2.0)
    "tenacity>=9.1.4",
    "sentry-sdk>=2.62.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-json-report>=1.5",  # emits test-results.json baked into Docker image
    # === v1.4.0b: integration test extras ===
    # Kept lean — chaos harness + integration tests use stdlib threading
    # and unittest.mock.patch on Flow.from_client_config (matches the
    # existing test_oauth_google.py pattern). pytest-asyncio is here
    # for forthcoming async paths but unused today.
    "pytest-asyncio>=1.4.0",
    # === v2.0.6: coverage gate (R33) ===
    # pytest-cov drives the --cov-fail-under floor configured in
    # pytest.ini (currently 55%, set by the Py 3.11 outlier on Linux
    # which measures 55.21% vs 56.5%+ on every other version).
    # Ratchet policy in docs/COVERAGE.md (+1pp/release toward 80%).
    "pytest-cov>=7.1.0",
    # === v2.2.2: property-based testing (R1 prediction / R5 audit Gap #6) ===
    # Hypothesis powers the property tests in
    # tests/unit/services/docs/test_tab_tree.py + test_markdown_render.py.
    # Generates random inputs against module invariants (depth-first
    # ordering, path uniqueness, insertText-index monotonicity, etc.).
    # The R6 UTF-16 bug class is the headline unblock — once the source
    # is fixed, the hypothesis tests pin the fix permanently.
    "hypothesis>=6.155.2",
]
# === v2.0.6: lint extras (closes pyright/ruff CI gap) ===
# e2e.yml's `lint` job invokes `uv run pyright src/` and
# `uv run ruff check src/ tests/`. Before this extra, neither tool was
# declared anywhere — `uv run` couldn't find them and the job died with
# `Failed to spawn: pyright / No such file or directory`. Pinned floors
# avoid surprise lint-rule churn between local + CI; bump on a separate
# PR when ready to absorb new findings.
lint = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]
# === PR-Δ6: Vercel pilot extras ===
# The VercelKvBackend talks to Upstash KV via the HTTP REST API; the
# implementation uses httpx (already transitive via FastMCP), so no
# net-new runtime dependency is required for the backend itself.
#
# This extras group exists for symmetry + future-proofing: when
# Vercel-specific tooling lands (Vercel CLI for local dev, vercel-sdk
# for programmatic deploy operations, upstash-redis if we ever decide
# the SDK is worth the dep), it goes here. Today the group is empty;
# `pip install appscriptly[vercel]` is a no-op extras-resolve that
# documents the intent without forcing the install.
#
# The Vercel deploy itself (api/index.py) needs only the base
# dependencies — no extras required to run on Vercel.
vercel = [
    # (Intentionally empty as of PR-Δ6. See comment above.)
]

[project.urls]
# PR-Δ5.5: repository URLs unchanged for now — the repo transfer to
# the ``appscriptly`` GitHub org (https://github.com/appscriptly) is a
# separate operator-scheduled cutover. When that lands, update both
# entries below + run a sweep on any hardcoded URL strings in docs/
# + the OpenSSF Scorecard badge in README.md.
Homepage = "https://github.com/Sundeepg98/google-docs-mcp"
Issues = "https://github.com/Sundeepg98/google-docs-mcp/issues"

[project.scripts]
# PR-Δ5.5: ``appscriptly`` is the canonical CLI entry-point post-rename;
# ``google-docs-mcp`` is preserved as a backward-compat alias so existing
# user shell scripts / install instructions / muscle memory keep working.
# Both delegate to the same ``main`` function — no behavior difference.
# The alias stays until v3.0 (the same removal horizon as
# ``gdocs_setup_apps_script`` → ``gdocs_install_automation`` per PR-α).
appscriptly = "appscriptly.server:main"
google-docs-mcp = "appscriptly.server:main"

[tool.hatch.build.targets.wheel]
# PR-Δ5.5: still points at ``src/appscriptly`` because the module
# path rename is deferred — see the ``[project]`` comment block above.
packages = ["src/appscriptly"]

# ---------------------------------------------------------------------
# Ruff lint config (v2.6a)
#
# Today's job: enforce the google_clients.get_service chokepoint.
# The TID251 rule bans the bare `from googleapiclient.discovery import
# build` import outside the wrapper file itself. Existing call sites
# are exempted via per-file-ignores below; PR2 migrates them and
# removes those ignores one file at a time.
#
# This config intentionally enables ONLY the TID rule family — broader
# linting is left to a separate PR so this change is reviewable in
# isolation and the e2e workflow's `ruff check src/ tests/` doesn't
# suddenly turn red on unrelated style issues.
# ---------------------------------------------------------------------

[tool.ruff.lint]
select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"googleapiclient.discovery.build" = { msg = "Use appscriptly.google_clients.get_service instead — single chokepoint for retry, logging, cache, etc. See PR #47 (v2.0.3 operator-secret leak) for the anti-pattern this lint prevents: a wrapper that's bypassed by direct imports." }

[tool.ruff.lint.per-file-ignores]
# google_api_client.py owns the SOLE legitimate use of
# googleapiclient.discovery.build (inside GoogleApiClientAdapter).
# PR2-A (v2.6b) removed docs_api.py from this list.
# PR2-B (v2.6b) removed drive_api.py from this list.
# PR2-C (v2.6b) removed the final 4 — docx_import.py, preview.py,
# retrofit.py, and gas_deploy/client.py — closing the bypass class.
# M2 (v2.1.2) promoted the actual ``build()`` call from google_clients.py
# into the new google_api_client.GoogleApiClientAdapter — google_clients.py
# is now a thin delegating facade that only re-exports the Resource type
# (which TID251 does not ban), so its own per-file ignore is dead weight
# and was removed in v2.3.0.
# Any direct `from googleapiclient.discovery import build` outside
# google_api_client.py is a lint failure (= a reintroduced bypass that
# defeats the retry / logging / cache chokepoint).
"src/appscriptly/google_api_client.py" = ["TID251"]

# ---------------------------------------------------------------------
# Pyright config (v2.0.6)
#
# `googleapiclient.discovery.Resource` is built dynamically from the
# Google API discovery document at runtime — its `.files()`,
# `.documents()`, `.scripts()`, etc. methods don't exist as static
# attributes that pyright can introspect. Every project that uses
# googleapiclient hits the same `reportAttributeAccessIssue` noise
# (46 instances across our 11 files). Silencing the rule globally
# is the idiomatic fix; the alternative is per-line `# type: ignore`
# at every Drive / Docs API call site, which pollutes diffs and
# offers zero real protection (it's not a bug class pyright catches
# anyway, since Resource attributes are intentionally unknowable
# statically).
#
# Everything else stays at default. The 7 genuine type issues
# pyright still flags on this codebase get proper fixes, not ignores.
# ---------------------------------------------------------------------

[tool.pyright]
include = ["src"]
# googleapiclient.discovery.Resource is dynamic; see rationale above.
reportAttributeAccessIssue = false

# ---------------------------------------------------------------------
# Coverage config (ROADMAP P3 / SPECS #10)
#
# Workflow-INDEPENDENT coverage floor. Until now the only enforcement
# was the `--cov-fail-under=55` CLI arg on the unit-test step in
# .github/workflows/test.yml, so any run OUTSIDE that exact CI job
# (a local `pytest tests/unit`, an ad-hoc invocation, a different
# workflow) had no floor at all. This `fail_under` is the backstop:
# coverage.py reads it on every `--cov` run, so the gate now travels
# with the repo instead of living in one CI string.
#
# Value = 55, deliberately MATCHED to the existing CLI floor (NOT a new
# number). 55 sits one integer below the worst-case measured version
# (Linux Py 3.11 at 55.21%; every other version is 56.5%+), i.e. it
# enforces with ~0.2pp headroom and does not break the current green
# build. The +1pp ratchet toward 80% is a SEPARATE change — see
# docs/COVERAGE.md "Ratchet policy". When that ratchet runs, bump THIS
# value and the test.yml CLI together so the two floors stay in lockstep.
# ---------------------------------------------------------------------

[tool.coverage.report]
fail_under = 55
